# router/video-router.go
@@ -14,6 +14,7 @@ func SetVideoRouter(router *gin.Engine) {
 	videoProxyRouter.Use(middleware.TokenOrUserAuth())
 	{
 		videoProxyRouter.GET("/videos/:task_id/content", controller.VideoProxy)
+		videoProxyRouter.GET("/video/generations/:task_id/content", controller.VideoProxy)
 	}
 
 	videoV1Router := router.Group("/v1")
